# ddcctl

./: .gitignore  CMakeFLists.backup  CMakeLists.txt  DDC.cpp  DDC.h  Info.plist  README.md  conanfile.txt  ddcctl.m
DDC.xcodeproj/: project.pbxproj
DDC.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
DDC.xcodeproj/project.xcworkspace/xcuserdata/jglanz.xcuserdatad/: UserInterfaceState.xcuserstate
DDC.xcodeproj/xcshareddata/xcschemes/: DDC.xcscheme
DDC.xcodeproj/xcuserdata/jglanz.xcuserdatad/xcschemes/: xcschememanagement.plist
cmake/: Init.cmake
src/: CMakeLists.txt  DDC.cpp  DDC.h  DDC.hpp  DDCControlIds.h  DDCFramework.h  DDCFramework.mm  ddcctl-new.cpp  ddcctl.cpp  ddcctl.mm
src/apple/: DDC+Apple.cpp  DDC.h  DDCFramework.h  DDCFramework.mm  Info.plist
src/cli/: CMakeLists.txt  ddccli.cpp
